# Lex-Chess

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.bot  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/bot/: __init__.py  handlers.py  keyboards.py
app/domain/: __init__.py  models.py  qualification.py  questionnaire.py  routing.py
app/integrations/: __init__.py  bitrix24.py
app/services/: __init__.py  formatters.py  intake.py  llm.py  website_leads.py
app/storage/: __init__.py  sqlite.py
deploy/: Caddyfile  README.md  bot.env.example  deploy.sh  server-bootstrap.sh  site.env.example
docs/: architecture.md  research.md
site/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
site/app/: globals.css  layout.js  manifest.js  page.js  robots.js  sitemap.js
site/app/api/leads/: route.js
site/app/articles/: page.js
site/app/articles/[slug]/: page.js
site/app/communication-consent/: page.js
site/app/personal-data/: page.js
site/app/privacy/: page.js
site/app/services/[slug]/: page.js
site/components/: ConsultationTerms.js  Footer.js  Header.js  JsonLd.js  LeadIntake.js  LegalDisclaimer.js
site/docs/: integration.md  site-analysis.md
site/lib/: bitrix24.js  lead-store.js  routing.js  schema.js  site-data.js  telegram.js
site/public/: widget.js
site/scripts/: resend-bitrix.js
tests/: test_bitrix_payloads.py  test_intake_prefill.py  test_llm_assistant.py  test_qualification.py  test_storage.py  test_website_leads.py
